--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,7 +15,7 @@ import Head from 'next/head';
   <meta name="twitter:card" content="summary_large_image" />
 </Head>
 
-# Toolkit: Build a news app to track local real estate development 
+# Tracking local real estate development 
 This page is built to serve the Columbians, to help enhancing transparency and accountability. Development Tracker can be used to look up information about real estate development in the city
 
 This site was built by Columbia Missourian's staff based on a template developed by Jimmy McBroom and Kate Abbey-Lambertz as part of her Reynolds Journalism Institute. 
